# requirements-mind

./: .cursorrules  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README.ru.md  cli.py  install.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
docs/: specification_v2.md  user_guide.md
docs/walkthroughs/: README.md  augment-dams-srs.md  augment-srs-example.md
flows/: 00-onboarding.md  01-intake.md  02-context.md  03-questions.md  04-draft.md  05-validate.md  06-final.md  07-analyze.md  08-collaborate.md  09-augment.md  09-elicitation.md
kb/: api-contract-checklist.md  brd-checklist.md  glossary.md  srs-checklist.md  tech-design-checklist.md
projects/example-project/: context.md  metadata.json  qa-history.md  questions.md  state.json
projects/example-project/analysis/: analysis-v1.md
projects/example-project/draft/: BRD-v1.md
projects/example-project/final/: BRD-v1-final.md
projects/example-project/input/: requirements.md  transcript.md
projects/example-project/messages/: orchestrator-decision.md
scripts/: _make_screenshot.py  export_to_notebooklm.py  fetch_bmad_skills.py  import_web.py  sync_to_vault.py  trace.py
skills/custom/: bmad-agent-analyst.toml  bmad-agent-pm.toml  bmad-agent-tech-writer.toml
skills/rm/: a0-onboarding-wizard.md  a1-intake-analyst.md  a2-requirements-validator.md  a3-elicitation.md  a3-question-generator.md  a4-document-writer.md  a5-research-assistant.md  a6-analysis-writer.md  master-orchestrator.md  reqmind.md
tests/: conftest.py  test_frontmatter.py  test_fsm.py  test_sanitize.py  test_trace.py
(+1 files in other folders)
