[project]
name = "requirements-mind"
version = "2.0.0"
description = "CLI-first, markdown-first, multi-agent tool for requirements engineering and project analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7.0",
    "rich>=13.7.1",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "markdownify>=0.11.6",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
