[project]
name = "requirements-mind"
version = "2.0.0"
description = "CLI-first, markdown-first, multi-agent tool for requirements engineering and project analysis."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Menta1ik" }]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Topic :: Software Development :: Documentation",
    "Topic :: Office/Business",
]
dependencies = [
    "pydantic>=2.7.0",
    "rich>=13.7.1",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "markdownify>=0.11.6",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
